# gpu-optimal-frequency-selection

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: README.md
artifacts/: README.md
config/: README.md
config/algorithms/: README.md
config/algorithms/ali_2022_reimpl/: README.md
config/algorithms/everest/: README.md
config/algorithms/my_method/: README.md
config/algorithms/oracle_static/: README.md
docs/: COMPARISON_METHOD_INTEGRATION_PLAN.md  EVEREST_REPRODUCTION_PLAN.md  EXPERIMENT_ORCHESTRATION_MODEL.md  EXTERNAL_BENCHMARK_IMPORT_RULES.md  README.md  REPO_ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-04-method-organization-implementation.md
docs/superpowers/specs/: 2026-06-04-method-organization-design.md
references/: README.md
references/papers/: EVEREST_ppopp25.txt
scripts/: README.md  update_submodules.sh
scripts/run/: README.md  control_hook.py  control_loop.py  control_runtime.py  controlled_mode.sbatch
src/: README.md
src/baselines/: README.md
src/common/: README.md  __init__.py
src/common/control/: __init__.py  interfaces.py  shell_controller.py
src/common/experiment/: __init__.py  interfaces.py  types.py  validation.py
src/common/telemetry/: __init__.py  env_provider.py  interfaces.py
src/custom/: README.md
src/custom/templates/: ALGORITHM_TEMPLATE.md
src/everest/: README.md  __init__.py
src/methods/: README.md  __init__.py  registry.py
tests/: README.md  __init__.py
tests/common/: __init__.py
tests/everest/: __init__.py  test_frequency_scaler.py  test_phase_characterizer.py  test_phase_identifier.py
tests/methods/: __init__.py
tests/oracle_static/: __init__.py  test_oracle_static_policy.py
tests/scripts/: __init__.py
(+74 files in other folders)
