# Project metadata and tooling configuration.
#
# Python floor: >= 3.10. This is a hard requirement, not a preference.
# The codebase uses language features that do not exist on 3.9 or earlier:
#   1. PEP 604 runtime unions evaluated at import time, e.g.
#      `JSONPrimitive = str | int | float | bool | None`
#      in src/common/experiment/types.py (this is a real assignment, not an
#      annotation, so `from __future__ import annotations` does NOT defer it).
#   2. `@dataclass(slots=True)` (the `slots` parameter was added in 3.10),
#      used across src/common and the local-reproduction policies.
#
# Pinned runtime/analysis dependencies live in requirements.txt. They are not
# duplicated here to avoid drift; install them with:
#   python -m pip install -r requirements.txt

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-optimal-frequency-selection"
version = "0.0.0"
description = "Paper-specific GPU DVFS research framework: reproduce, compare, and iterate on frequency-selection methods."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
# `src` is an implicit namespace package (no src/__init__.py), imported as
# `src.common.*` / `src.methods.*` from the repository root.
where = ["."]
include = ["src*"]
exclude = ["tests*", "external*", "scripts*"]
namespaces = true

[tool.setuptools.package-data]
# Co-located source caches under src/**/paper/ (PDFs, extracted text) are
# research artifacts, not package data. Default wheel building already excludes
# non-.py files, and these paths are git-ignored, so they are not bundled.
"*" = []
